[package]
name = "scandir-rs"
version = "0.9.5"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
description = "A fast directory scanner."
edition = "2021"
license = "MIT"
repository = "https://github.com/brmmm3/scandir-rs"
homepage = "https://github.com/brmmm3/scandir-rs"
readme = "README.md"
keywords = ["fast", "scandir", "walk"]
include = [
    "Cargo.toml",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
    "README.md",
    "src/*",
    "test/*.py",
]

[lib]
name = "scandir_rs"
crate-type = ["cdylib", "lib"]

[package.metadata.maturin]
requires-python = ">=3.6"
classifier = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[dependencies]
jwalk = "0.6.0"                                                      #{ git = "https://github.com/jessegrosjean/jwalk" }
rayon = "1.5.1"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.2"
glob = { git = "https://github.com/brmmm3/glob.git", tag = "0.4.0" }

[target.'cfg(unix)'.dependencies]
expanduser = "1.2.2"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
