[metadata]
author_email = "mrbm74@gmail.com"
description = Fast directory scanner.
long-description = file: README.rst

[options]
zip_safe = false

[tomlgen_rust]
create_workspace = true

[tomlgen_rust.dependencies]
pyo3 = { version = "0.3.0-alpha", features = ["extension-module"] }

[tomlgen_rust.dependencies.hello-english]
english-lint = "*"

[aliases]
build_rust = tomlgen_rust build_rust
clean_rust = tomlgen_rust clean_rust
build = tomlgen_rust build
clean = clean_rust clean
