[package]
name = "scandir_rs"
version = "2.9.0"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
description = "A fast file tree scanner written in Rust"
edition = "2021"
license = "MIT"
repository = "https://github.com/brmmm3/scandir-rs"
homepage = "https://github.com/brmmm3/scandir-rs"
readme = "README.md"
keywords = ["fast", "scandir", "walk"]
include = [
    "Cargo.toml",
    "pyproject.toml",
    "src/*",
    "test/*.py",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[lib]
name = "scandir_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
speedy = { version = "0.8", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
scandir = { version = "2.9" }
#scandir = { path = "../scandir", version = "2.9.0" }

[features]
default = ["speedy", "bincode", "json"]
speedy = ["dep:speedy"]
bincode = ["dep:bincode", "dep:serde", "dep:serde_derive"]
json = ["dep:serde_json", "dep:serde", "dep:serde_derive"]
