[project]
name = "scandir-rs"
version = "2.9.3"
authors = [{ name = "Martin Bammer", email = "mrbm74@gmail.com" }]
description = "A fast file tree scanner written in Rust"
license = "MIT"
readme = "README.md"
dependencies = []
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
]

[build-system]
requires = ["setuptools", "wheel", "setuptools_rust", "maturin>=1.5.1"]
build-backend = "maturin"

[tool.maturin]
manylinux = "2_34"
strip = true

[tool.poetry.dependencies]
python = '>=3.7'
maturin = ">=1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.4"
