[project]
name = "scandir-rs"
version = "2.9.5"
authors = [{ name = "Martin Bammer", email = "mrbm74@gmail.com" }]
description = "A fast file tree scanner written in Rust"
license = "MIT"
readme = "README.md"
dependencies = []
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
]

[build-system]
requires = ["setuptools", "wheel", "setuptools_rust", "maturin>=1.5.1"]
build-backend = "maturin"

[tool.maturin]
manylinux = "2_34"
strip = true

[tool.poetry.dependencies]
python = '>=3.10'
maturin = ">=1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.1"

[dependency-groups]
dev = [
    "pytest == 9.0.1",
    "dirty-equals == 0.11",
    "ruff == 0.14.4",
    "zizmor == 1.16.3",
    "typos == 1.39.0",
    "rumdl == 0.0.176",
]
bench = [
    "oyaml",
    "pyyaml",
    "ryaml",
    "ruamel-yaml",
    "polars == 1.35.2",
    "altair == 6.0.0",
    "py-cpuinfo == 9.0.0",
    "vl-convert-python == 1.8.0",
]

[project.urls]
Source = "https://github.com/brmmm3/scandir-rs"
Homepage = "https://github.com/brmmm3/scandir-rs"
"Bug Tracker" = "https://github.com/brmmm3/scandir-rs/issues"
