[package]
name = "scandir"
version = "2.5.1"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
description = "A fast directory scanner."
edition = "2021"
license = "MIT"
repository = "https://github.com/brmmm3/scandir-rs"
homepage = "https://github.com/brmmm3/scandir-rs"
readme = "README.md"
keywords = ["fast", "scandir", "walk"]
include = ["Cargo.toml", "src/*"]

[lib]
name = "scandir"
crate-type = ["lib"]

[dependencies]
jwalk-meta = "0.9"
rayon = "1.10"
flume = "0.11"
glob-sl = "0.4"
speedy = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3.10"
unix-named-pipe = "0.2"

[features]
speedy = ["dep:speedy"]

[target.'cfg(unix)'.dependencies]
expanduser = "1.2"
