[package]
name = "scandir"
version = "2.7.2"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
description = "A fast file tree scanner written in Rust"
edition = "2021"
license = "MIT"
repository = "https://github.com/brmmm3/scandir-rs"
homepage = "https://github.com/brmmm3/scandir-rs"
readme = "README.md"
keywords = ["fast", "scandir", "walk"]
include = ["Cargo.toml", "src/*"]

[lib]
name = "scandir"
crate-type = ["lib"]

[dependencies]
jwalk-meta = "0.9"
rayon = "1.10"
flume = "0.11"
glob-sl = "0.4"
speedy = { version = "0.8", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
walkdir = "2.5"
scan_dir = "0.3"

[features]
default = ["speedy", "bincode", "json"]
speedy = ["dep:speedy"]
bincode = ["dep:bincode", "dep:serde", "dep:serde_derive"]
json = ["dep:serde_json", "dep:serde", "dep:serde_derive"]

[target.'cfg(unix)'.dependencies]
expanduser = "1.2"

[target.'cfg(unix)'.dev-dependencies]
unix-named-pipe = "0.2"

[[bench]]
name = "count"
path = "benches/count.rs"
harness = false

[[bench]]
name = "walk"
path = "benches/walk.rs"
harness = false

[[bench]]
name = "scandir"
path = "benches/scandir.rs"
harness = false
