[package]
name = "pyext-scandir-rs"
version = "0.3.0"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
edition = "2018"

[lib]
name = "scandir_rs"
crate-type = ["cdylib"]

[dependencies]
jwalk = { git = "https://github.com/brmmm3/jwalk.git" }
rayon = "1.3"
crossbeam = "0.7"
crossbeam-channel = "0.4"

[target.'cfg(unix)'.dependencies]
expanduser = "1.2"

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]
